--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -293,7 +293,7 @@
 
         <div class="column">
           <h3>Form Data</h3>
-          <div>radiobuttons value = {{ radioControl.value }}</div>
+          <div>radiobuttons value = {{ radioControl.value.name }}</div>
         </div>
       </div>
 
@@ -330,7 +330,7 @@
         <div class="column">
           <div class="elem_center">
             <h3>Form Data</h3>
-            <div>dropdown value = {{dropDownDivControl.value}}</div>
+            <div>dropdown value = {{dropDownDivControl.value.name}}</div>
           </div>
         </div>
       </div>
