Подправила css у кнопок со спинерами, теперь выглядит аккуратнее.

--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,9 +1,7 @@
 <div [class]="className">
-  <div class="elem_center"> <!--    не работает-->
-    <div *ngIf="isSpin" class="spinner_button_box">
+    <div *ngIf="isSpin" [class]="classSpinnerBox">
       <app-spinner [spinnerType]="spinnerType" [class]="classSpinner"></app-spinner>
     </div>
-  </div>
 
   <div class="button">
     <p [class]="classText">
