--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -215,7 +215,7 @@
           <div class="row">
             <div class="elem_center">
               <app-button size="small" type="spinner" [isSpin]="isSpinnerSmall" (click)="loadSmall()"
-                          [disabled]="disabled">New spinner
+                          [disabled]="disabled">Spinner
               </app-button>
             </div>
           </div>
