--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -45,7 +45,7 @@ html {
 }
 
 .loadingPage {
-  position: absolute;
+  position: fixed;
   z-index: 998;
   top: 0;
   left: 0;
@@ -54,8 +54,7 @@ html {
   width: 100%;
   height: 100%;
 
-  //background-color: rgba(0,0,0,0.5); /*затемним фон*/
-  background-color: grey;
+  background-color: #c8c8c8;
   opacity: 0.5;
 }
 
