--- a/src/app/button/button.component.less
+++ b/src/app/button/button.component.less
@@ -74,14 +74,14 @@
   }
 
   &__small {
-    width: 80px;
-    height: 32px;
+    width: 85px;
+    height: 36px;
     font-size: 9px;
   }
 
   &__default {
-    width: 100px;
-    height: 40px;
+    width: 105px;
+    height: 43px;
     font-size: 12px;
   }
 
@@ -104,15 +104,15 @@
   }
 
   &__small {
-    width: 80px;
-    height: 32px;
-    font-size: 11px;
+    width: 85px;
+    height: 36px;
+    font-size: 9px;
   }
 
   &__default {
-    width: 100px;
-    height: 40px;
-    font-size: 13px;
+    width: 105px;
+    height: 43px;
+    font-size: 12px;
   }
 
   &__large {
@@ -135,15 +135,15 @@
   }
 
   &__small {
-    width: 80px;
-    height: 32px;
-    font-size: 11px;
+    width: 85px;
+    height: 36px;
+    font-size: 9px;
   }
 
   &__default {
-    width: 100px;
-    height: 40px;
-    font-size: 13px;
+    width: 105px;
+    height: 43px;
+    font-size: 12px;
   }
 
   &__large {
@@ -351,10 +351,18 @@
 
 .spinner_button_box {
   position: relative;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  margin: auto 0 auto 5px;
+
+  &__small{
+    margin: 8px 3px 0 5px; // лучше устанавливать разные значения для разных размеров кнопок
+  }
+
+  &__default{
+    margin: 7px 0 0 7px; // лучше устанавливать разные значения для разных размеров кнопок
+  }
+
+  &__large{
+    margin: 5px 0 0 7px; // лучше устанавливать разные значения для разных размеров кнопок
+  }
 }
 
 .button {
