Начала создавать локальное меню для управления разделами сайта из системы

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,6 +108,8 @@
 <div class="BiggestDiv">
   <div [class]="page">
 
+    <app-menu-tabs [tabs]="formsList" [disabled]="disabled" valueName="name"></app-menu-tabs>
+
     <div class="content" role="main">
 
       <div class="row">
