--- a/src/app/menu-tabs/menu-tabs.component.less
+++ b/src/app/menu-tabs/menu-tabs.component.less
@@ -1,18 +1,15 @@
 .menu-tab {
-
   &__box {
+    cursor: pointer;
     display: inline-block;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 4px;
     border-bottom: 1px solid #ccc;
   }
 
   &__box:hover {
     border-bottom: 2px solid #1976d2;
-  }
-
-  &__field {
-
   }
 
   p { // ne rabotaet
