--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -12,10 +12,19 @@
   margin: 15px;
 }
 
+td {
+  border: 1px solid black;
+  padding: 4px;
+}
+
+p {
+  padding-bottom: 6px;
+}
+
+
 .elem_center {
   margin: auto;
 }
-
 
 html {
   min-height: 100%;
