--- a/src/app/input/input.component.less
+++ b/src/app/input/input.component.less
@@ -3,6 +3,8 @@
   white-space: nowrap; // для того, чтобы текст не переходил на другую строку сам
   height: 40px;
   width: 170px; // обязательное значение здесь
+ // width: 100%;
+ // height: 100%;
   max-width: 170px; // помогает не удлинняться полю ввода
   border-radius: 3px;
   border: 1px solid gray;
