--- a/src/app/edit-table/edit-table.component.less
+++ b/src/app/edit-table/edit-table.component.less
@@ -1,3 +1,12 @@
+/* внешние границы таблицы серого цвета толщиной 1px */
+table {
+  border: 1px solid grey;
+}
+/* границы ячеек первого ряда таблицы */
 th {
-  display: inline-block;
+  border: 1px solid grey;
+}
+/* границы ячеек тела таблицы */
+td {
+  border: 1px solid grey;
 }
