--- a/src/app/edit-table/edit-table.component.html
+++ b/src/app/edit-table/edit-table.component.html
@@ -1,8 +1,12 @@
 <table>
-<tr >
-  <th *ngFor="let head of listHead">{{head}}</th>
-</tr>
-<tr *ngFor="let information of listData">
-  <td *ngFor="let head of listHead; let i = index;" contenteditable="true" [id]="getRowId()">{{information[i]}}</td>
-</tr>
+  <tr>
+    <th *ngFor="let head of listHead">{{head}}</th>
+  </tr>
+  <ng-container formArrayName="tableRows" *ngFor="let information of listData">
+    <tr>
+      <td *ngFor="let head of listHead; let i = index;" contenteditable="true">{{information[i]}}<td>
+<!--        <app-input type="table_field" formControlName="email" />-->
+      </td>
+    </tr>
+  </ng-container>
 </table>
